--- a/src/layouts/BlogPostLayout.astro
+++ b/src/layouts/BlogPostLayout.astro
@@ -2,6 +2,10 @@
 import Header from '../components/Header.astro';
 import Footer from '../components/Footer.astro';
 
+import '../styles/global.css';
+import '../themes/prism-atom-dark.css';
+
+
 import { format } from 'date-fns';
 import readingTime from 'reading-time';
 const { content } = Astro.props;
@@ -31,9 +35,7 @@ const stats = readingTime(content.astro.source);
     <link
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet"
-    />
-    <link rel="stylesheet" href={Astro.resolve("../styles/global.css")} />
-    <link rel="stylesheet" href={Astro.resolve("../themes/prism-atom-dark.css")} />    
+    />  
   </head>
 
   <body>
