--- a/src/themes/prism-atom-dark.css
+++ b/src/themes/prism-atom-dark.css
@@ -31,7 +31,7 @@ pre[class*="language-"] {
 	padding: 1em;
 	margin: .5em 0;
 	overflow: auto;
-	border-radius: 0.3em;them
+	border-radius: 0.3em;
 }
 
 :not(pre) > code[class*="language-"],
