feat: add daisyui

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,5 +1,5 @@
 <footer>
-  <div class="bg-blue-600 py-4 flex justify-center">
+  <div class="bg-accent py-4 flex justify-center">
     <div class="text-white">
       <a href="https://github.com/TillaTheHun0/astro-blog">Source Code</a> - © Copyright 2022
     </div>
