--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -5,7 +5,7 @@ import Footer from '../components/Footer.astro';
 import "../styles/global.css";
 ---
 
-<html lang="en">
+<html lang="en" data-theme="black">
   <head>
     <meta charset="utf-8" />
     <title>Tyler Hall - Web Developer</title>
@@ -28,7 +28,9 @@ import "../styles/global.css";
     <link
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet"
-    />  
+    />
+
+    <script src="https://cdn.jsdelivr.net/npm/theme-change@2.0.2/index.js" />  
   </head>
 
   <body>
