--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -6,7 +6,7 @@ import ThemeSelect from './ThemeSelect.astro';
 <div class="navbar bg-base-100">
   <div class="flex-1">
     <div class="flex justify-center space-around py-2 space-x-4">
-      <h1 class="m-auto">Tyler Hall</h1>
+      <a href="/" class="font-bold">Tyler Hall</a>
     </div>
   </div>
   <div class="flex-none">
@@ -14,11 +14,6 @@ import ThemeSelect from './ThemeSelect.astro';
       <li>
         <NavLink href="/about" title="About Me" active="text-primary">
           About
-        </NavLink>
-      </li>
-      <li tabindex="0">
-        <NavLink href="/blog" title="Blog Posts" active="text-primary">
-          Posts
         </NavLink>
       </li>
       <ThemeSelect />
