--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -5,8 +5,9 @@ import Footer from '../components/Footer.astro';
 
 <html lang="en" data-theme="black">
   <head>
-    <meta charset="utf-8" />
-    <title>Tyler Hall - Web Developer</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width">
+    <title>Tyler Hall - Fullstack Web Developer</title>
     <base href="/" />
 
     <style global>
