--- a/src/components/Posts.astro
+++ b/src/components/Posts.astro
@@ -14,7 +14,7 @@ const { live } = Astro.props;
 let allPosts = Astro.fetchContent('../pages/posts/*.md');
 allPosts = allPosts.sort((a, b) => new Date(b.publishedDate).valueOf() - new Date(a.publishedDate).valueOf());
 
-const posts = allPosts.filter(post => post.published && isPost(post, live));
+const posts = allPosts.filter(post => !post.draft && isPost(post, live));
 ---
 
 <div class="text-2xl w-4/5">
