fix: some styles

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -10,7 +10,7 @@ import BaseLayout from '../layouts/BaseLayout.astro';
 
     <div class="flex justify-center">
       <div class="avatar">
-        <div class="w-10 rounded-full">
+        <div style="width: 250px;" class="rounded-full">
           <img src="/assets/images/tyler.jpeg" />
         </div>
       </div>
