fix: more styling

--- a/src/components/ThemeSelect.astro
+++ b/src/components/ThemeSelect.astro
@@ -19,7 +19,8 @@
   <div
     class="dropdown-content bg-base-200 text-base-content rounded-t-box rounded-b-box top-px h-96 w-52 overflow-y-auto shadow-2xl mt-16">
     <ul class="menu menu-compact p-4" tabindex="0">
-      <li><button data-set-theme="black" data-act-class="active" class="active">🏴  black</button></li>
+      <li><button data-set-theme="fantasy" data-act-class="active" class="active">🧚‍♀️  fantasy</button></li>
+      <li><button data-set-theme="black" data-act-class="active">🏴  black</button></li>
       <li><button data-set-theme="lisght" data-act-class="active">🌝  light</button></li>
       <li><button data-set-theme="dark" data-act-class="active">🌚  dark</button></li>
       <li><button data-set-theme="cupcake" data-act-class="active" class="">🧁  cupcake</button></li>
@@ -36,7 +37,6 @@
       <li><button data-set-theme="aqua" data-act-class="active">🐟  aqua</button></li>
       <li><button data-set-theme="lofi" data-act-class="active">👓  lofi</button></li>
       <li><button data-set-theme="pastel" data-act-class="active">🖍  pastel</button></li>
-      <li><button data-set-theme="fantasy" data-act-class="active">🧚‍♀️  fantasy</button></li>
       <li><button data-set-theme="wireframe" data-act-class="active">📝  Wireframe</button></li>
       <li><button data-set-theme="luxury" data-act-class="active">💎  luxury</button></li>
       <li><button data-set-theme="dracula" data-act-class="active">🧛‍♂️  dracula</button></li>
