--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -3,7 +3,7 @@ import Header from '../components/Header.astro';
 import Footer from '../components/Footer.astro';
 ---
 
-<html lang="en" data-theme="black">
+<html lang="en" data-theme="fantasy">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width">
