--- a/src/components/NavLink.astro
+++ b/src/components/NavLink.astro
@@ -1,6 +1,6 @@
 ---
 const { href, title, active } = Astro.props;
-const { pathname: path } = Astro.request.url;
+const path = new URL(Astro.request.url).pathname;
 ---
 
 <a role="button" href={href} title={title} class={path.startsWith(href) ? `${active}`: ''}>
