--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -1,6 +1,7 @@
 ---
 import Header from '../components/Header.astro';
 import Footer from '../components/Footer.astro';
+
 ---
 
 <html lang="en" data-theme="fantasy">
@@ -10,7 +11,7 @@ import Footer from '../components/Footer.astro';
     <title>Tyler Hall - Fullstack Web Developer</title>
     <base href="/" />
 
-    <style global>
+    <style is:global>
       @import "../styles/global.css";
     </style>
 
