--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -1,6 +1,8 @@
 ---
 import Header from '../components/Header.astro';
 import Footer from '../components/Footer.astro';
+
+import '../styles/global.css'
 ---
 
 <html lang="en" data-theme="fantasy">
@@ -9,10 +11,6 @@ import Footer from '../components/Footer.astro';
     <meta name="viewport" content="width=device-width">
     <title>Tyler Hall - Fullstack Web Developer</title>
     <base href="/" />
-
-    <style global>
-      @import "../styles/global.css";
-    </style>
 
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta
