fix: gutters on all pages

--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -36,7 +36,7 @@ import '../styles/global.css'
 
   <body>
     <Header />
-      <main class="flex flex-grow justify-center min-h-screen p-4">
+      <main class="flex flex-grow justify-center min-h-screen p-4 mx-auto w-screen max-w-4xl">
         <slot/>
       </main>
     <Footer />
