--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -3,7 +3,7 @@ import BaseLayout from '../layouts/BaseLayout.astro';
 ---
 
 <BaseLayout>
-  <div class="w-full md:w-3/5">
+  <div class="w-full">
     <div class="flex-col space-around space-y-4">
       <div class="text-2xl py-4">
         About Me
