--- a/src/components/Posts.astro
+++ b/src/components/Posts.astro
@@ -17,7 +17,7 @@ allPosts = allPosts.sort((a, b) => new Date(b.publishedDate).valueOf() - new Dat
 const posts = allPosts.filter(post => !post.draft && isPost(post, live));
 ---
 
-<div class="text-2xl w-4/5">
+<div class="text-2xl">
   {posts.map(post => {
     return (
       <div class="py-4">
